--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,21 +1,32 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Création d'un nouvel utilisateur{% endblock %}
 
 {% block body %}
     {% for flashError in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
 
-    <h1>Register</h1>
+    <h1>Création d'un nouvel utilisateur</h1>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+        {{ form_row(registrationForm.firstName , {
+            label: 'Prénom'
+        })}}
+        {{ form_row(registrationForm.lastName , {
+            label: 'Nom'
         }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+        {{ form_row(registrationForm.email , {
+            label: 'Email'
+        }) }}
+        {{ form_row(registrationForm.categoryUser , {
+            label: 'Filière'
+        }) }}
+        {{ form_row(registrationForm.plainPassword, {
+            label: 'Mot de passe'
+        }) }}
+        {# {{ form_row(registrationForm.agreeTerms) }} #}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn">Créer un nouvel utilisateur</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
