--- a/templates/themes/index.html.twig
+++ b/templates/themes/index.html.twig
@@ -1,37 +1,38 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Themes index{% endblock %}
+{% block title %}Themes index
+{% endblock %}
 
 {% block body %}
-    <h1>Themes index</h1>
+	<div class="container">
+		<h1>Themes index</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>TitleTheme</th>
-                <th>PictureTheme</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for theme in themes %}
-            <tr>
-                <td>{{ theme.id }}</td>
-                <td>{{ theme.titleTheme }}</td>
-                <td>{{ theme.pictureTheme }}</td>
-                <td>
-                    <a href="{{ path('themes_show', {'slug': theme.slug}) }}">show</a>
-                    <a href="{{ path('themes_edit', {'slug': theme.slug}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="4">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>TitleTheme</th>
+					<th>PictureTheme</th>
+					<th>actions</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for theme in themes %}
+					<tr>
+						<td>{{ theme.titleTheme }}</td>
+						<td><img src="{{ asset('uploads/pictures/' ~ theme.pictureTheme) }}" width="100"></td>
+						<td>
+							<a href="{{ path('themes_show', {'slug': theme.slug}) }}">show</a>
+							<a href="{{ path('themes_edit', {'slug': theme.slug}) }}">edit</a>
+						</td>
+					</tr>
+				{% else %}
+					<tr>
+						<td colspan="4">no records found</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
 
-    <a href="{{ path('themes_new') }}">Create new</a>
+		<a href="{{ path('themes_new') }}">Create new</a>
+	</div>
 {% endblock %}
