--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,11 +8,46 @@
 		</title>
 		<link
 		href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-		{# Run `composer require symfony/webpack-encore-bundle`
-		           and uncomment the following Encore helpers to start using Symfony UX #}
+		<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+	{# Run `composer require symfony/webpack-encore-bundle`
+			           and uncomment the following Encore helpers to start using Symfony UX #}
 	</head>
 	<body>
+		<header>
+			<nav class="navbar navbar-expand-lg ">
+				<div class="container-fluid">
+					<a class="navbar-brand" href="{{ path('app_logout')}}">
+						<img src="{{ asset('uploads/components/logoArinfo.png') }}" width="350">
+					</a>
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarNav">
+						<ul class="navbar-nav">
+							<li class="nav-item">
+								<a class="nav-link active" aria-current="page" href="{{ path('app_logout')}}">Accueil</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Administration</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('app_logout')}}">Déconnexion</a>
+							</li>
+							{# <li class="nav-item">
+								<a class="nav-link" href="#">Features</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Pricing</a>
+							</li> #}
+							
+						</ul>
+					</div>
+				</div>
+			</nav>
+		</header>
+
 		{% block body %}{% endblock %}
+
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	</body>
 </html>
