--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,24 +1,32 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!{% endblock %}
+{% block title %}Accueil
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-    {% for message in app.flashes('success') %}
-        <div class="alert alert-succes" role="alert">{{message }}</div>
-    {% endfor %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	{% for message in app.flashes('success') %}
+		<div class="alert alert-succes" role="alert">{{message }}</div>
+	{% endfor %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/arinfo-classroom/src/Controller/MainController.php'|file_link(0) }}">src/Controller/MainController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/arinfo-classroom/templates/main/index.html.twig'|file_link(0) }}">templates/main/index.html.twig</a></code></li>
-    </ul>
-</div>
+
+	<div class="container">
+    <section class="themeSection">
+		{% for theme in themes %}
+        <a class="linkTheme" href="{{ path('themes_show', {'slug': theme.slug}) }}">
+			<div class="card" style="width: 300px;">
+				<img src="{{asset('uploads/pictures/' ~ theme.pictureTheme) }}" class="card-img-top" >
+				<div class="card-body">
+					<h5 class="card-title">{{theme.titleTheme}}</h5>
+				</div>
+			</div>
+        </a>
+		{% endfor %}
+
+
+	</div>
+    </section>
+
+
 {% endblock %}
