--- a/templates/themes/show.html.twig
+++ b/templates/themes/show.html.twig
@@ -1,30 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Themes{% endblock %}
+{% block title %}Themes
+{% endblock %}
 
 {% block body %}
-    <h1>Themes</h1>
+	<div class="container">
+		<h1>{{theme.titleTheme}}</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ theme.id }}</td>
-            </tr>
-            <tr>
-                <th>TitleTheme</th>
-                <td>{{ theme.titleTheme }}</td>
-            </tr>
-            <tr>
-                <th>PictureTheme</th>
-                <td>{{ theme.pictureTheme }}</td>
-            </tr>
-        </tbody>
-    </table>
+		<section class="themeSection">
+			{% for chapter in theme.chapters %}
 
-    <a href="{{ path('themes_index') }}">back to list</a>
 
-    <a href="{{ path('themes_edit', {'slug': theme.id}) }}">edit</a>
+				<a class="linkTheme" href="{{ path('chapters_show', {'id': chapter.id}) }}">
+					<div class="card" style="width: 360px;">
+						<img src="{{asset('uploads/pictures/' ~ chapter.pictureChapter) }}" class="card-img-top">
+						<div class="card-body">
+							<h5 class="card-title">{{chapter.titleChapter}}</h5>
+						</div>
+					</div>
+				</a>
 
-    {{ include('themes/_delete_form.html.twig') }}
-{% endblock %}
+			{% endfor %}
+
+		</section>
+		<a href="{{ path('home') }}">Retour à l'accueil</a>
+
+		
+	{% endblock %}
