--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,8 +51,8 @@ nav a.nav-link {
   text-align: left;
   border: none;
   outline: none;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .accordion.active,
@@ -77,5 +77,11 @@ button.accordion:after {
 
 button.accordion.active:after {
   content: "\2212";
+}
+
+.subChapterDiv,
+.panel {
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 /*# sourceMappingURL=style.css.map */
