--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -49,7 +49,10 @@ nav {
     text-align: left;
     border: none;
     outline: none;
-    transition: 0.4s;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 .accordion.active,
@@ -62,6 +65,7 @@ nav {
     background-color: white;
     display: none;
     overflow: hidden;
+    // transition: max-height 0.2s ease-out;
 }
 
 button.accordion:after {
@@ -74,4 +78,12 @@ button.accordion:after {
 
 button.accordion.active:after {
     content: "\2212";
+}
+
+.subChapterDiv,
+.panel {
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
