--- a/templates/sub_chapters/_delete_form.html.twig
+++ b/templates/sub_chapters/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('sub_chapters_delete', {'id': sub_chapter.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('sub_chapters_delete', {'id': sub_chapter.id}) }}" onsubmit="return confirm('Etes-vous sûre de vouloir supprimer ce sous chapitre?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ sub_chapter.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn">Supprimer</button>
 </form>
