--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -96,7 +96,7 @@ button.accordion.active:after {
     width: 350px;
     margin-top: auto;
     margin-bottom: auto;
-    background: #f39c12;
+    background: rgb(0, 38, 71);
     position: relative;
     display: flex;
     justify-content: center;
@@ -106,6 +106,11 @@ button.accordion.active:after {
     -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 5px;
+    h1,
+    a {
+        color: white;
+        text-align: center;
+    }
 }
 
 .brand_logo_container {
@@ -132,7 +137,7 @@ button.accordion.active:after {
 
 .login_btn {
     width: 100%;
-    background: #c0392b !important;
+    background: rgb(0, 118, 168) !important;
     color: white !important;
 }
 
@@ -146,10 +151,11 @@ button.accordion.active:after {
 }
 
 .input-group-text {
-    background: #c0392b !important;
+    background: rgb(0, 118, 168) !important;
     color: white !important;
     border: 0 !important;
     border-radius: 0.25rem 0 0 0.25rem !important;
+    height: 100%;
 }
 
 .input_user,
