--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -19,7 +19,7 @@
 			<div class="user_card">
 				<div class="d-flex justify-content-center">
 					<div class="brand_logo_container">
-						<img src="https://cdn.freebiesupply.com/logos/large/2x/pinterest-circle-logo-png-transparent.png" class="brand_logo" alt="Logo">
+						<img src="{{ asset('uploads/components/logo.png') }}" class="brand_logo" alt="Logo">
 					</div>
 				</div>
 				<div class="d-flex justify-content-center form_container">
@@ -36,7 +36,7 @@
 							</div>
 						{% endif %}
 
-						<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+						<h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
 
 						<div class="input-group mb-3">
 							<div class="input-group-append">
