Install ckeditor5 on Exercices form

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -167,3 +167,10 @@ button.accordion.active:after {
 .custom-checkbox .custom-control-input:checked~.custom-control-label::before {
     background-color: #c0392b !important;
 }
+
+
+/************ckeditor******************/
+
+#editor {
+    border: 1px solid black;
+}
