--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,4 +172,9 @@ button.accordion.active:after {
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
   background-color: #c0392b !important;
 }
+
+/************ckeditor******************/
+#editor {
+  border: 1px solid black;
+}
 /*# sourceMappingURL=style.css.map */
